@@ -596,7 +596,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(long value) {
-    put(new Long(value));
+    put(Long.valueOf(value));
     return this;
   }
 
@@ -700,7 +700,7 @@ public class JSONArray {
    *           If the index is negative.
    */
   public JSONArray put(int index, long value) throws JSONException {
-    put(index, new Long(value));
+    put(index, Long.valueOf(value));
     return this;
   }
 
